--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Chris Kaiser, Harry Qiao, Arushi Talwar
 navbar-links:
  Chris's Website: "https://chris882-2021.github.io"
  Harry's Website: "https://harryqiao.github.io"
- Arushi's Website: "https://harryqiao.github.io"
+ Arushi's Website: "arushitalwar.github.io"
 
 # --- Logo --- #
 
